Início correção resenhas turma A

--- a/Materias/2S2020/PED_CE342/Turma_A/212883.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212883.org
@@ -43,3 +43,19 @@ No parágrafo seguinte é descrito o fenômeno de ilusão monetária sem antes d
 Mais rigorosamente, para que a taxa de desemprego seja persistentemente menor que a natural, é preciso que o governo amplie a demanda agregada também persistentemente. Como consequência, há surpresa inflacionária. Daí em diante você descreveu corretamente o raciocínio econômico.
 
 Em seguida, é apresentada a TQM. No entanto, pouco é dito sobre suas hipóteses. Além disso, dado o papel central da TQM, poderia ter sido apresentada antes. Com isso, seria possível explicar a ilusão monetária de forma menos expectacional. Mais ao fim (último parágrafo), você corretamente pontua a importância da hipótese de estabilidade de circulação da moeda para explicar a estabilidade macroeconômica e subsequente instabilidade decorrente da discricionariedade.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
