--- a/Materias/2S2020/PED_CE342/Turma_A/212900.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212900.org
@@ -47,3 +47,18 @@ Em seguida, é mencionado que a autoridade lança mão da expansão inflacionár
 No parágrafo seguinte, é contraposto o monetarismo com o keynesianismo ortodoxo em que é corretamente pontuada a importância da instabilidade do investimento. Ainda sim, cabe aqui uma sugestão. Ao longo da exposição da escola monetarista, não é feita nenhuma discussão à respeito da instabilidade dos componentes da demanda agregada (tampouco da TQM). Desse modo, a comparação fica comprometida em função da ausência de uma mediação entre ambas escolas. Uma forma de contornar isso seria por meio de uma exposição das hipóteses de cada corrente.
 
 Adiante é mencionada a retomada da TQM pelo monetarismo. Cabe aqui a menção de que tal elemento é fundamental para essa escola e deveria ser exposta em maiores detalhes para que a construção dos argumentos desses autores fosse mais clara.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
