--- a/Materias/2S2020/PED_CE342/Turma_A/213360.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/213360.org
@@ -49,3 +49,18 @@ Você corretamente apresentou o raciocínio econômico associado à curva de Phi
 Mais ao fim, você apresenta a Teoria Quantitativa da Moeda (TQM). No entanto, note que esse é um elemento central da escola monetarista. Sem as hipóteses associadas à ela, dificilmente conseguiria explicar as demais implicações de mudanças na oferta de moeda. Somado a isso, pontua-se as hipóteses (comportamentais) que descrevem o consumo agregado para Friedman. Em seguida, você corretamente associa a TQM com uma regra de expansão monetária com a taxa de crescimento do produto. Note que somente com a TQM é possível explicar o porquê de um regime de regras para a expansão de moeda. 
 
 *Resumo:* De modo geral, sua resenha está boa e os argumentos estão bem encadeados. No entanto, a TQM ocupou um lugar de menor destaque em sua análise. Você corretamente pontuou as outras hipóteses presentes nesta escola e as associou com as recomendações de política econômicas. Além disso, você bem descreveu a racionalidade econômica da curva de Phillips aceleracionista bem como outros pontos que vão além da ilusão monetária que embasam os regimes monetários propostos por essa escola.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
