--- a/Materias/2S2020/PED_CE342/Turma_A/213731.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/213731.org
@@ -40,3 +40,18 @@ Em seu parágrafo de abertura é possível destacar que pontuou um dos elementos
 Em seguida, é corretamente pontuada a importância da TQM para o monetarismo e como variações no estoque de moeda estão entre os principais determinantes da inflação. No entanto, até o momento, pouco foi dito a respeito das suas hipóteses e implicações. A partir da sua exposição em que é destaca a inflação como fenômeno monetário, fica claro o porquê de se adotar regras monetárias. No entanto, existem hipóteses anteriores a essa conclusão que poderiam ser pontuadas. Adiante, é corretamente exposto o conceito de taxa natural de desemprego. No entanto, a ideia que tal taxa não é imutável poderia ser tratada de forma mais rigorosa (/i.e./ de forma mais precisa que ``ação humana'').
 
 Adiante, é discutida a curva de Phillips Aceleracionista. Um adendo: cuidado ao impor causalidade que vai da hipótese das expectativas adaptativas à ilusão monetária. Os agentes poderiam formar expectativas de outra forma e ainda sim incorrer na ilusão monetária. O foco poderia recair mais sobre o que é tal ilusão decorre da confusão entre varições nominais e reais.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
