--- a/Materias/2S2020/PED_CE342/Turma_A/218090.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/218090.org
@@ -76,3 +76,18 @@ Apesar de curtos, seus dois primeiros parágrafos de aberturam possuem informaç
   - Essa questão é pontuada adiante, mas não esta conectada aos argumentos
 - Impressão geral: parece que esta descrevendo Snowdon e Vane. A princípio, isso faz com que seu texto seja uma resenha. No entanto, vale lembrar o propósito do porquê resenhar determinado texto.
   - Para a disciplina, é uma mais importante pontuar como os conceitos se conectam para explicar alguma proposição de política monetária do que como Snowdon e Vane conectam tais conceitos (os objetivos e intenções deles são outros). Sinta-se a vontade para alterar a ordem dos textos
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
