--- a/Materias/2S2020/PED_CE342/Turma_A/231302.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/231302.org
@@ -37,3 +37,18 @@
 Logo após o parágrafo de abertura, foi corretamente pontuado os principais elementos do monetarismo. O conceito de taxa de desemprego natural foi corretamente apresentado. No entanto, cabe aqui um adendo: tal conceito se inicia com a tradição marginalista e não com a Clássica. Como tal discussão não toca os objetivos da disciplina, não será alongada. Ao discutir a ilusão monetária, parece ter apresentado a curva de Phillips convencional como se fosse a aceleracionista.
 
 Em seguida, expões corretamente a TQM enquanto uma teoria da demanda por moeda. Poderia ter mencionado também que a Moeda é tratada como um ativo (como outro qualquer) e quais são seus determinantes. No parágrafo seguinte, foi mencionado corretamente que a proposição de política econômica é da adoção de regras monetárias. No entanto, a partir de sua exposição não é possível explicitar o porquê dessa proposição. Mais precisamente: não pontuou as hipóteses e implicações da TQM (estabilidade relativa da demanda por moeda).
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
