--- a/Materias/2S2020/PED_CE342/Turma_A/231898.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/231898.org
@@ -37,3 +37,18 @@
 Após o parágrafo de abertura, corretamente associa a taxa natural de desemprego à hipótese de maximização das funções objetivo dos agentes. Adiante, corretamente pontua que a curva de Phillips aceleracionista esta relacionada à expectativa inflacionária. No entanto, não é discutido o porquê dessa inflação ser ``aceleracionista''. Sem seguida, é discutida a ilusão monetária em função das expectativas adaptativas. Mais precisamente, a hipótese de expectativas adaptativas é uma forma de simplificar a realidade enquanto a ilusão monetária é o fenômeno a ser explicado. Uma coisa não decorre necessariamente da outra tal como colocado na resenha. Os agentes podem formar expectativas adaptativas sem que exista ilusão monetária. Em seguida, a geração de inflação surpresa é tratada enquanto uma proposição. O argumento poderia ser construído de forma diferente: uma vez que a economia converge à taxa natural de desemprego e os agente sofrem de ilusão monetária, seria preciso que a autoridade monetária gerasse inflação persistentemente para que a taxa de desemprego permaneça abaixo da natural. Seu ponto esta correto, mas poderia ser apenas melhor articulado.
 
 Adiante, são mencionados os argumentos contra a discricionariedade da política econômica bem como os contrapontos com a escola precedente. No parágrafo seguinte, é apresentada a TQM. Uma sugestão seria a de articular melhor as hipóteses e implicações da TQM (estabilidade da demanda por moeda) com as discussões anteriores. Com isso, pode-se entender melhor como uma expansão da base monetária geraria inflação e qual seria a proposição para evitar isso. Ao fim deste parágrafo, é pontuada as implicações da TQM e sua relação com a demanda por moeda, mas não é dada muita atenção a esse ponto.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
