--- a/Materias/2S2020/PED_CE342/Turma_A/232395.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232395.org
@@ -41,3 +41,18 @@ Em seguida, é corretamente discutido que o monetarismo distingue os efeitos de 
 
 Adiante, é corretamente pontuado que uma das recomendações da escola monetarista é a de reduções na taxa natural via lado da oferta e não pela demanda.
 Também é colocada a importância dessa escola para as posteriores e como dão ênfase à política monetária. No entanto, não há menção à principal proposição: regras monetárias
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
