--- a/Materias/2S2020/PED_CE342/Turma_A/232796.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232796.org
@@ -37,3 +37,18 @@
 Em seu parágrafo de abertura esta corretamente pontuada a retomada da TQM enquanto contribuição central do monetarismo. Em seguida, corretamente contrapôs o monetarismo ao keynesianismo ortodoxo assim como destacou os determinantes da demanda por moeda. No parágrafo seguinte estão corretamente colocas as implicações da TQM enquanto teoria da demanda por moeda.
 
 Adiante, ao expor a curva de Phillips ampliada, corretamente relacionou a estabilidade de preços à equidade entre taxa de desemprego corrente e normal. Poderia apenas ter descrito sobre a taxa natural de desemprego. Também foi mencionada a importância dos lags e a ineficácia da política monetária na tentativa de realizar um ajuste fino. No entanto, não houve nenhuma menção à proposição de regras monetárias (isso quase aparece no seu último parágrafo).
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
