--- a/Materias/2S2020/PED_CE342/Turma_A/233335.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233335.org
@@ -38,3 +38,18 @@
 No início da resenha é pontuado o conceito de taxa natural de desemprego. Adiante, é mencionado que esta taxa é alcançada na ausência de distúrbios monetários (correto) e na presença do pleno emprego (um pouco vago). Ao discutir as diferentes versão da Curva de Phillips, dá a entender que o monetarismo se baseia em diferentes versões dela. No entanto, é a versão aceleracionista que é proposta pelos autores dessa escola. Além disso, é mencionada a ilusão monetária sem a definir. Por fim, não é exposto o porquê do caráter aceleracionista desta última versão da curva de Phillips. Mais a frente, o caráter aceleracionista da inflação é tratado como uma hipótese sendo que é uma implicação do modelo.
 
 No parágrafo seguinte é afirmado que a moeda é neutra no longo prazo. No entanto, não forem apresentadas as hipóteses que levam a esse resultado (notadamente aquelas relacionadas à TQM). Também é dito que o papal da política monetária é restrito, mas não como deve ser restringido (me refiro à não menção de recomendação de um regime monetário). No parágrafo seguinte em que apresenta a TQM, existem algumas imprecisões. Dentre elas, vale a menção de que é utilizada a palavra "estoque" sem especificar qual estoque está sendo tratado. Infere-se que é o estoque de moeda, mas deveria ser explicitado. Também não há menção sobre a relação da TQM com a teoria de demanda por moeda monetarista, noção esta fundamental para compreender as implicações desta escola.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 1
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
