--- a/Materias/2S2020/PED_CE342/Turma_A/233747.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/233747.org
@@ -43,3 +43,18 @@ Adiante, é destacado o retorno da taxa de desemprego efetiva à natural. No ent
 Logo depois, você corretamente associa a não recomendação de uma política monetária discricionária a outros elementos que não somente a ilusão monetária. Adiante, também foi relacionada à proposição de regras monetárias à não obstaculização da estabilidade econômica por distúrbios gerados pela política econômica.
 
 Mais ao fim, foi colocada algumas críticas às hipóteses da TQM. No entanto, não foi pontuada em nenhum momento a importância dessas mesmas hipóteses na construção do argumento monetarista.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
