--- a/Materias/2S2020/PED_CE342/Turma_A/240317.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/240317.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, estão alguns dos pontos centrais da escola monetarista, mas não o essencial. De um ponto propositivo, enfatizaria a adoção de regras monetárias, não a taxa de desemprego natural (acessório para explicar tais regras). Ao descrever as diferentes curvas de Phillips, fez pouca conexão entre elas. Adiante, menciona a ilusão monetária, mas não a define/descreve. Mais a frente, menciona a neutralidade da moeda e que devem existir regras para a expansão dos agregados monetários, mas não especifica qual (deve ser igual à taxa de crescimento do produto). Por fim, cabe mencionar que mal analisou a TQM que, como visto em aula, é fundamental para explicar as implicações de política econômica.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
