--- a/Materias/2S2020/PED_CE342/Turma_A/255241.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/255241.org
@@ -37,3 +37,18 @@
 No início de sua resenha, corretamente pontua o monetarismo enquanto contraponto ao Keynesianismo ortodoxo. No parágrafo seguinte, expõe corretamente os principais elementos dessa escola. No entanto, ao descrever a TQM poderia ter aprofundado em suas hipóteses bem como a indicá-la enquanto uma teoria da demanda por moeda. Em seguida, corretamente descreve o que é a ilusão monetária, mas poderia ter sido mais clara nos encadeamentos. Exemplo do que mencionei anteriormente a respeito da necessidade de expor as hipóteses da TQM se dá neutralidade da moeda. Do jeito que esta no texto, não há nenhuma explicação do porquê deste resultado. Para isso, seria necessário passar pela estabilidade da demanda por moeda.
 
 Há uma certa confusão no parágrafo seguinte em que discute a função da política monetária. Você escreve justamente o oposto ao prescrito pelos monetaristas. Para que a política monetária não tente fazer com que a taxa de desemprego fique abaixo da natural, é preciso criar regras monetárias para evitar aumentos no nível de preços. Desse modo, a recomendação é a de regras fixas e não de contração monetária como exposto.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
