--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-07 sáb 15:59
+% Created 2020-11-09 seg 14:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org8ad7a28}
+\label{sec:orgac94d5f}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -110,7 +110,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \section{Lista de presença e notas}
-\label{sec:org06d9173}
+\label{sec:orgd9023fd}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
